@@ -21,9 +21,10 @@
  - added restart of daq when Scaling model has changed
  - fixed hmi.widget save without a title
  - fixed export.handler (wrong start and enddate)
- - fixed export to file, check of arrayindex
+ - fixed export to file, check of arrayindex, import of numpy
  - added backend table (VariableState) for current values in the database
  - fixed crash of hmi admin when widget has no title
  - added unixtime value in web hmi (experimental)
  - fixed custom html panel variable not uptading in hmi
- - added restart_daemon field in background task model 
+ - added restart_daemon field in background task model
+ - added check of write permissions for pid and log file in DaemonHandler
